Fix button padding on mobile sizes

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -214,7 +214,7 @@ button {
 }
 
 @media only screen and (max-width: 768px) {
-  button {
+  button.btn {
     padding: 0.5rem 1rem;
   }
 }
